Need to Fix Top White Space

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,14 @@
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, caption {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    outline: 0;
+    font-size: 100%;
+    vertical-align: baseline;
+    background: transparent;
+}
+
+
 html {
   box-sizing: border-box;
 }
@@ -5,13 +16,14 @@ html {
   box-sizing: inherit;
 }
 
-body {
-    background-color: LightGray;
+body,
+footer {
+    
     font-family: 'Roboto', sans-serif;
 
 }
 div {
-    border: 1px solid Chocolate;
+    /*border: 1px solid Chocolate; */
 }
 
 .content {
@@ -20,6 +32,9 @@ div {
     width:970px;
 }
 
+header{
+	margin-top:0;
+}
 
 /*----navigation----*/
 
@@ -139,10 +154,10 @@ button {
 .cases .devices{
      width: 33.3333333%;
     display: inline-block;
-    /* styles to assist with debugging */
+    /* styles to assist with debugging 
     border: 1px solid black;
     box-sizing: border-box;
-    
+    */
 
 
 }
@@ -163,4 +178,70 @@ button {
     font-weight: 400;
     font-size: 1.563rem;
     margin: 2.5rem 0px 1.875rem;
+}
+
+/*----Footer---*/
+
+.social {
+    background-color: #fff;
+    overflow: auto;
+    padding-bottom: 9.375rem;
+    text-align: center;
+}
+
+ .icon{
+	margin-top:-5em;
+}
+
+.social .icons > li {
+    border-radius: 1.25rem;
+    width: 2.5rem;
+    height: 2.5rem;
+    display: inline-block;
+    margin: 1.25rem 5px;
+    border: 1px solid #eaebec;
+    padding: 0.625rem 0;
+    text-align: center;
+
+}
+
+.social hr {
+    border: 0;
+    border-top: 1px solid #eaebec;
+    margin: 1.313rem 0;
+}
+
+
+.social .icons > li:hover {
+    cursor: pointer;
+}
+.social .twitter {
+    color: #55acee;
+}
+.social .facebook {
+    color: #4867aa;
+}
+.social .instagram {
+    color: #d13f86;
+}
+.social .copy {
+    font-size: 0.9rem;
+    font-weight: 300;
+    color: #838994;
+}
+
+.content h5{
+	font-weight: 500;
+	margin-bottom:-1em;
+
+}
+.social .copy {
+    font-size: 0.9rem;
+    font-weight: 300;
+    color: #838994;
+}
+
+.icons{
+	padding-left:0;
+	list-style-type:none;
 }
